unpackaged/objects/copado__Application__c.object
<CustomObject>
	<fields>
		<fullName>copado__Description__c</fullName>
		<label>Description</label>
		<length>131072</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copado__Parent_Application__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Parent Application</label>
		<referenceTo>copado__Application__c</referenceTo>
		<relationshipLabel>Sub-Applications</relationshipLabel>
		<relationshipName>Sub_Applications</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Product_Manager__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Product Manager</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Applications</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Release_Status__c</fullName>
		<label>Release Status</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>GA</fullName>
				</value>
				<value>
					<fullName>Beta</fullName>
				</value>
				<value>
					<fullName>Pilot</fullName>
				</value>
				<value>
					<fullName>Development</fullName>
				</value>
				<value>
					<fullName>Definition</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Stability_Icon__c</fullName>
		<formula>TEXT(copado__Stability__c) + &quot; &quot; +
IMAGE( 
CASE( copado__Stability__c, 
&quot;Stable&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Uncertain&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Unstable&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Stability Icon&quot;)</formula>
		<label>Stability Status</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Stability__c</fullName>
		<label>Stability</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Stable</fullName>
				</value>
				<value>
					<fullName>Uncertain</fullName>
				</value>
				<value>
					<fullName>Unstable</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Application</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Release_Status__c</columns>
		<columns>copado__Stability__c</columns>
		<columns>copado__Stability_Icon__c</columns>
		<columns>copado__Parent_Application__c</columns>
		<columns>copado__Product_Manager__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Applications</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>